Fix sort links on the list